[gd_scene load_steps=13 format=2]

[ext_resource path="res://audio/soundtrack.wav" type="AudioStream" id=1]
[ext_resource path="res://audio/break1.wav" type="AudioStream" id=2]
[ext_resource path="res://audio/heal.wav" type="AudioStream" id=3]
[ext_resource path="res://audio/die.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds.gd" type="Script" id=5]
[ext_resource path="res://audio/break2.wav" type="AudioStream" id=6]
[ext_resource path="res://audio/break3.wav" type="AudioStream" id=7]
[ext_resource path="res://audio/heal2.wav" type="AudioStream" id=8]
[ext_resource path="res://audio/jump1.wav" type="AudioStream" id=9]
[ext_resource path="res://audio/jump4.wav" type="AudioStream" id=10]
[ext_resource path="res://audio/jump2.wav" type="AudioStream" id=11]
[ext_resource path="res://audio/jump3.wav" type="AudioStream" id=12]

[node name="Sounds" type="Node"]
script = ExtResource( 5 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -4.012

[node name="Die" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -5.246

[node name="BreakSounds" type="Node" parent="."]

[node name="Break1" type="AudioStreamPlayer" parent="BreakSounds"]
stream = ExtResource( 2 )
volume_db = -10.493

[node name="Break2" type="AudioStreamPlayer" parent="BreakSounds"]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="Break3" type="AudioStreamPlayer" parent="BreakSounds"]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="HealSounds" type="Node" parent="."]

[node name="Heal" type="AudioStreamPlayer" parent="HealSounds"]
stream = ExtResource( 3 )
volume_db = -8.641

[node name="Heal2" type="AudioStreamPlayer" parent="HealSounds"]
stream = ExtResource( 8 )
volume_db = -8.0

[node name="JumpSounds" type="Node" parent="."]

[node name="Jump1" type="AudioStreamPlayer" parent="JumpSounds"]
stream = ExtResource( 9 )
volume_db = -6.536
bus = "Reverb"

[node name="Jump2" type="AudioStreamPlayer" parent="JumpSounds"]
stream = ExtResource( 11 )
volume_db = -6.536
bus = "Reverb"

[node name="Jump3" type="AudioStreamPlayer" parent="JumpSounds"]
stream = ExtResource( 12 )
volume_db = -6.536
bus = "Reverb"

[node name="Jump4" type="AudioStreamPlayer" parent="JumpSounds"]
stream = ExtResource( 10 )
volume_db = -6.536
bus = "Reverb"
